Changed h3 color to apply the correct contrast

--- a/src/index.css
+++ b/src/index.css
@@ -70,7 +70,7 @@ h2 {
 }
 
 h3 {
-  color: #487;
+  color: #2f5e52;
   font-size: 18px;
   padding: 0.5rem 0;
 }
